# dispatcher-demo

./: CMakeLists.txt
include/dispatcherdemo/: DataStore.hpp  DataStoreSink.hpp  HDF5DataStore.hpp  StorageElement.hpp  StorageKey.hpp
src/: CommonIssues.hpp  DataPackager.cpp  DataPackager.hpp  Packager.cpp  Packager.hpp
test/: data_packager_demo.json
